<resources>
    <string name="app_name">CreatiPad</string>
    <string name="action_settings">Settings</string>
    <string name="action_signIn">Sign In</string>
    <string name="action_signOut">Sign Out</string>
    <string name="whats_on_your_mind">Whats on your mind</string>
    <string name="share_note">Share Note</string>
    <string name="delete_notes">Delete Notes</string>
    <string name="draw_something">Art washes away from the soul the dust of everyday life.</string>
    <string name="no_notes">No Notes !</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="Color">color</string>
    <string name="Save">Save</string>
    <string name="lineWidth">Line Width</string>
    <string name="erase">Erase</string>
    <string name="clear">Clear</string>
    <string name="back">Back</string>
    <string name="set_width">Set Width</string>
    <string name="label_alpha">Alpha</string>
    <string name="label_red">Red</string>
    <string name="label_green">Green</string>
    <string name="label_blue">Blue</string>
    <string name="set_color">Set Color</string>
    <string name="draw_pad_text">DrawPad</string>
    <string name="no_lyric_text">No Content</string>
    <string name="whatsThisCalled">Whats the Song Called?</string>
    <string name="spitSomething">Let ya Soul Sing</string>
    <string name="whoAreYou">Who Are You</string>
    <string name="Reset">Reset Color</string>
    <string name="voice_record">Save A FreeStyle</string>
    <string name="zero">0.00</string>
    <string name="pickMusicFile">Pick MP3</string>
    <string name="pickMusicUrl">Pick Music Url</string>
    <string name="pick_url">Pick Url</string>
    <string name="url">Url</string>
</resources>
