<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/colorid"
        android:icon="@drawable/baseline_palette_black_24"
        android:title="@string/Color"
        app:showAsAction="always" />
    <item
        android:id="@+id/saveid"
        android:icon="@drawable/save"
        android:title="@string/Save" />
    <item
        android:id="@+id/linewidth"
        android:icon="@drawable/baseline_format_line_spacing_black_24"
        android:title="@string/lineWidth"
        app:showAsAction="always" />
    <item
        android:id="@+id/eraseid"
        android:icon="@drawable/eraser"
        android:title="@string/erase"
        app:showAsAction="always" />
    <item
        android:id="@+id/clearid"
        android:icon="@drawable/baseline_clear_black_24"
        android:title="@string/clear" />
</menu>