<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.notepad.MainActivity">
    <item
        android:id="@+id/voice_record"
        android:icon="@drawable/mic"
        android:orderInCategory="100"
        android:title="@string/voice_record"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_signIn"
        android:orderInCategory="100"
        android:title="@string/action_signIn"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_signOut"
        android:orderInCategory="100"
        android:title="@string/action_signOut"
        app:showAsAction="never" />
    <item
        android:id="@+id/search_icon"
        android:title="Search"
        android:icon="@drawable/search_icon"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

</menu>
